<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">推箱子</string>
    <string name="action_settings">Settings</string>
    <string name="beihua">北华大学</string>
    <string name="title_activity_main">Main</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pass">Pass</string>
    <string name="start">开始游戏</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="signup">注册新用户</string>
    <string name="forget_password">忘记密码</string>
    <string name="save_password">保存密码</string>
    <string name="login_auto">自动登录</string>

</resources>
