<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    android:orientation="vertical"
    tools:context="com.fat246.push.LogIn" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <ImageView
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:layout_marginBottom="@dimen/edit_top"
            android:src="@drawable/ic_launcher" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_top"
            android:gravity="center"
            android:hint="@string/user"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textColor="@color/launcher_bgcolor"
            android:textColorHint="@color/launcher_bgcolor" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_top"
            android:gravity="center"
            android:hint="@string/password"
            android:textColor="@color/launcher_bgcolor"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/launcher_bgcolor" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/edit_top"
            android:background="@drawable/login_selector" />
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <CheckBox 
            android:id="@+id/save_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_password"
            android:textColor="@color/text_color"
            />
        	<CheckBox 
            android:id="@+id/login_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_auto"
            android:layout_marginLeft="@dimen/edit_top"
            android:textColor="@color/text_color"/>
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/signup" 
            android:textColor="@color/text_color"/>

        <Button
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/forget_password"
            android:textColor="@color/text_color" />
    </LinearLayout>

</LinearLayout>